[gd_scene load_steps=10 format=3 uid="uid://km8uxlhrcnh8"]

[ext_resource type="FontFile" uid="uid://bvlcg00nw25h6" path="res://fonts/Montserrat-Medium.ttf" id="1"]
[ext_resource type="FontFile" uid="uid://8dimkhekf4j6" path="res://fonts/Xolonium-Regular.ttf" id="4"]
[ext_resource type="Script" path="res://GUI/RestartInterface.gd" id="5"]

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("1"), ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="7"]
default_font = SubResource("6")

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("1"), ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="10"]
fallbacks = Array[Font]([ExtResource("1"), ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/200/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/160/0 = Vector2(0, 0)
cache/0/200/0/ascent = 0.0
cache/0/200/0/descent = 0.0
cache/0/200/0/underline_position = 0.0
cache/0/200/0/underline_thickness = 0.0
cache/0/200/0/scale = 1.0
cache/0/200/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/200/0/kerning_overrides/200/0 = Vector2(0, 0)
cache/0/200/0/kerning_overrides/160/0 = Vector2(0, 0)
cache/0/160/0/ascent = 0.0
cache/0/160/0/descent = 0.0
cache/0/160/0/underline_position = 0.0
cache/0/160/0/underline_thickness = 0.0
cache/0/160/0/scale = 1.0
cache/0/160/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/160/0/kerning_overrides/200/0 = Vector2(0, 0)
cache/0/160/0/kerning_overrides/160/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="8"]
fallbacks = Array[Font]([ExtResource("1"), ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="9"]
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/2/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)

[node name="RestartInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource("7")
script = ExtResource("5")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 89.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.027451, 0.0235294, 0.0235294, 1)
theme_override_fonts/font = SubResource("11")
theme_override_font_sizes/font_size = 50
text = "Score: 0"

[node name="Retry" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.713726, 0.713726, 0.713726, 0.227451)

[node name="VBoxContainer2" type="VBoxContainer" parent="Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -127.0
offset_right = 252.0
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Retry/VBoxContainer2"]
layout_mode = 2

[node name="FinalScoreLabel" type="Label" parent="Retry/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0.0627451, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("10")
theme_override_font_sizes/font_size = 160
text = "You got 0 Score!"

[node name="MessageLabel" type="Label" parent="Retry/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("8")
theme_override_font_sizes/font_size = 50
text = "Press enter to retry"
horizontal_alignment = 1

[node name="CheckButton" type="Button" parent="Retry/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("9")
theme_override_font_sizes/font_size = 50
text = "back to main page"

[connection signal="pressed" from="Retry/VBoxContainer2/CheckButton" to="." method="_on_CheckButton_pressed"]
